# red-run

./: .gitignore  .mcp.json  404.html  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  SKILLS.md  architecture.d2  config.sh  index.html  install.sh  mkdocs.yml  preflight.sh  run.sh  uninstall.sh  workflow.d2
.claude/: settings.json
agents/: ad-agent.md  ad-discovery-agent.md  ad-exploit-agent.md  credential-cracking-agent.md  evasion-agent.md  index.html  linux-privesc-agent.md  network-recon-agent.md  password-spray-agent.md  pivoting-agent.md  privesc-agent.md  research-agent.md  web-agent.md  web-discovery-agent.md  web-exploit-agent.md  windows-privesc-agent.md
architecture/: index.html
dashboard-and-monitoring/: index.html
dependencies/: index.html
dlp-proxy-plan/: index.html
docs/: agents.md  architecture.d2  architecture.md  dashboard-and-monitoring.md  dependencies.md  dlp-proxy-plan.md  engagement-state.md  index.md  installation.md  killboard.md  mcp-servers.md  running-an-engagement.md  skills-reference.md  writing-skills.md
engagement-state/: index.html
installation/: index.html
killboard/: index.html
mcp-servers/: index.html
operator/: config.sh  setup.sh
running-an-engagement/: index.html
teammates/: README.md  (+32 more)
tools/skill-router/: README.md  convert_frontmatter.py  indexer.py  pyproject.toml  server.py  update_routing_refs.py
tools/skill-router/tests/: test_agents.py  test_index.py  test_skills.py
tools/sliver-server/: .gitignore  README.md  connection.py  pyproject.toml  server.py
tools/sliver-server/proto/: README.md
(+140 files in other folders)
